--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -19,6 +19,24 @@ a:hover, a.active {
         font-size: 1.3em;
 }
 
-img.logo {
-    height: 60%;
+nav.navbar {
+  
+    padding-top: 1.5em;
+}
+
+div.logo {
+    height: 3rem;
+}
+
+@media (max-width: 1024px)
+div.logo {
+    margin-bottom: 10px;
+}
+
+
+@media (max-width: 1024px)
+div.logo {
+    height: 4rem;
+    
+    
 }
