--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -26,6 +26,7 @@ nav.navbar {
 
 div.logo {
     height: 3rem;
+    visibility: hidden;
 }
 
 @media (max-width: 1024px)
@@ -33,8 +34,12 @@ div.logo {
     margin-bottom: 10px;
 }
 
-
 @media (max-width: 1024px)
 div.logo {
     height: 4rem;
+}
+
+.a-clean:hover, a-clean.active {
+    border-bottom: unset;
+    margin-bottom: 0px;
 }
