--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -8,6 +8,10 @@
         margin-top: 10px;
     }
 
+    .menu {
+        font-size: 0.8rem;
+    }
+
     #desktop {
         display: none;
     }
