--- a/static/css/colors.css
+++ b/static/css/colors.css
@@ -2,7 +2,7 @@
     --main: #6e60e8;
     --main-light: #734eaf;
     --dark: #000;
-    --dark-light: #101010;
+    --dark-light: #cecece;
     --white: #eee;
     --grey: rgb(169, 169, 169);
 }
