--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,7 +4,7 @@
     --main: #565656;
     --main-light: #efefef;
     --dark: #eeeeee;
-    --dark-light: #1b1b1b;
+    --dark-light: #dbdbdb;
     --white: #565656;
     --grey: rgb(167 167 167);
 }
@@ -13,13 +13,10 @@
     text-align: center;
     font-size: 1.5em;
     font-family: 'GreatVibes Regular';
-   
-
 }
 
 a:hover, a.active {
     border-bottom: 1px solid var(--main);
-
 }
 
 .navbar-middle {
@@ -28,14 +25,18 @@ a:hover, a.active {
 }
 
 nav.navbar {
-    
     min-height: 7.25rem;
-    
+    background-color: #eeeeee00;
 }
 
 div.logo {
     height: 0rem;
     visibility: hidden;
+}
+
+body {
+   
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(234,236,240,1) 67%, rgba(210,215,223,1) 100%);
 }
 
 
@@ -44,3 +45,9 @@ div.logo {
     margin-bottom: 0px;
 }
 
+.footer {
+    background-color: #c4c8cc;
+    color: rgb(46, 46, 46);
+    font-size: small;
+    padding: 1rem 1rem 1rem;
+}
