--- a/static/css/colors.css
+++ b/static/css/colors.css
@@ -1,8 +1,8 @@
 :root {
-    --main: #6e60e8;
-    --main-light: #734eaf;
+    --main: #e8607b;
+    --main-light: #ff8099;
     --dark: #000;
-    --dark-light: #cecece;
+    --dark-light: #101010;
     --white: #eee;
     --grey: rgb(169, 169, 169);
 }
